--- a/lab02/build.gradle
+++ b/lab02/build.gradle
@@ -6,7 +6,7 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.apache.commons:commons-vfs2-distribution:2.7.0'		
+	implementation 'org.apache.commons:commons-csv:1.8'			
 }
 
 mainClassName = 'csci2020u.lab02.SimpleTest'
